@@ -1,0 +1,81 @@
+stylesheet
+  : ( CHARSET_SYM STRING ';' )?
+    (S|CDO|CDC)* ( import ( (CDO|CDC) (S|CDO|CDC) )* )*
+    ( ( ruleset | media | page ) ( (CDO|CDC) (S|CDO|CDC) )* )*
+  ;
+import
+  : IMPORT_SYM S*
+    (STRING|URI) S* ( medium ( COMMA S* medium)* )? ';' S*
+  ;
+media
+  : MEDIA_SYM S* medium ( COMMA S* medium )* LBRACE S* ruleset* '}' S*
+  ;
+medium
+  : IDENT S*
+  ;
+page
+  : PAGE_SYM S* pseudo_page?
+    LBRACE S* declaration? ( ';' S* declaration? )* '}' S*
+  ;
+pseudo_page
+  : ':' IDENT S*
+  ;
+operator
+  : '/' S* | COMMA S*
+  ;
+combinator
+  : PLUS S*
+  | GREATER S*
+  | S+
+  ;
+unary_operator
+  : '-' | PLUS
+  ;
+property
+  : IDENT S*
+  ;
+ruleset
+  : selector ( COMMA S* selector )*
+    LBRACE S* declaration? ( ';' S* declaration? )* '}' S*
+  ;
+selector
+  : simple_selector ( combinator simple_selector )*
+  ;
+simple_selector
+  : element_name ( HASH | class | attrib | pseudo )*
+  | ( HASH | class | attrib | pseudo )+
+  ;
+class
+  : '.' IDENT
+  ;
+element_name
+  : IDENT | '*'
+  ;
+attrib
+  : '[' S* IDENT S* ( ( '=' | INCLUDES | DASHMATCH ) S*
+    ( IDENT | STRING ) S* )? ']'
+  ;
+pseudo
+  : ':' ( IDENT | FUNCTION S* (IDENT S*)? ')' )
+  ;
+declaration
+  : property ':' S* expr prio?
+  ;
+prio
+  : IMPORTANT_SYM S*
+  ;
+expr
+  : term ( operator? term )*
+  ;
+term
+  : unary_operator?
+    ( NUMBER S* | PERCENTAGE S* | LENGTH S* | EMS S* | EXS S* | ANGLE S* |
+      TIME S* | FREQ S* )
+  | STRING S* | IDENT S* | URI S* | hexcolor | function
+  ;
+function
+  : IDENT '(' S* expr ')' S*
+  ;
+hexcolor
+  : HASH S*
+  ;
