@@ -1,5 +1,5 @@
 #! /usr/bin/env python
-# LR(1) parser, autogenerated on 2008-03-21 21:28:24
+# LR(1) parser, autogenerated on 2009-07-12 00:23:51
 # generator: wisent 0.4, http://seehuhn.de/pages/wisent
 # source: grammar.wi
 
@@ -63,27 +63,30 @@ class Parser(object):
     """LR(1) parser class.
 
     terminal symbols:
-      '!', '*', '+', ':', ';', 'string', 'token', '|'
+      '!', '(', ')', '*', '+', ':', ';', '?', 'string', 'token', '|'
 
     nonterminal symbols:
-      '_item', '_item*', '_rhs', '_tos', 'grammar', 'list', 'rule', 'rule*'
+      '_0*', '_2*', '_4*', '_6?', '_item', 'grammar', 'group', 'list', 'rule'
 
     production rules:
-      'grammar' -> 'rule*'
-      'rule*' -> 
-      'rule*' -> 'rule*' 'rule'
-      'rule' -> 'token' ':' '_rhs' ';'
-      '_rhs' -> 'list'
-      '_rhs' -> '_rhs' '|' 'list'
-      'list' -> '_item*'
-      '_item*' -> 
-      '_item*' -> '_item*' '_item'
-      '_item' -> '_tos'
-      '_item' -> '_tos' '+'
-      '_item' -> '_tos' '*'
-      '_item' -> '!'
-      '_tos' -> 'token'
-      '_tos' -> 'string'
+      'grammar' -> '_0*'
+      '_0*' -> 
+      '_0*' -> '_0*' 'rule'
+      'rule' -> 'token' ':' 'list' '_2*' ';'
+      '_2*' -> 
+      '_2*' -> '_2*' '|' 'list'
+      'list' -> '_4*'
+      '_6?' -> 
+      '_6?' -> '?'
+      '_6?' -> '*'
+      '_6?' -> '+'
+      '_4*' -> 
+      '_4*' -> '_4*' '_item' '_6?'
+      '_4*' -> '_4*' '!'
+      '_item' -> 'token'
+      '_item' -> 'string'
+      '_item' -> 'group'
+      'group' -> '(' 'list' '_2*' ')'
     """
 
     class ParseErrors(Exception):
@@ -105,52 +108,78 @@ class Parser(object):
             self.errors = errors
             self.tree = tree
 
-    terminals = [ '!', '*', '+', ':', ';', 'string', 'token', '|' ]
-    _transparent = [ '_item', '_item*', '_rhs', '_tos', 'rule*' ]
+    terminals = [ '!', '(', ')', '*', '+', ':', ';', '?', 'string', 'token',
+                  '|' ]
+    _transparent = [ '_0*', '_2*', '_4*', '_6?', '_item' ]
     EOF = Unique('EOF')
     S = Unique('S')
 
-    _halting_state = 19
+    _halting_state = 25
     _reduce = {
-        (0, EOF): ('rule*', 0), (0, 'token'): ('rule*', 0),
-        (2, EOF): ('grammar', 1), (3, EOF): ('rule*', 2),
-        (3, 'token'): ('rule*', 2), (5, '!'): ('_item*', 0),
-        (5, ';'): ('_item*', 0), (5, 'string'): ('_item*', 0),
-        (5, 'token'): ('_item*', 0), (5, '|'): ('_item*', 0),
-        (7, EOF): ('rule', 4), (7, 'token'): ('rule', 4),
-        (8, ';'): ('_rhs', 1), (8, '|'): ('_rhs', 1), (9, '!'): ('_item*', 0),
-        (9, ';'): ('_item*', 0), (9, 'string'): ('_item*', 0),
-        (9, 'token'): ('_item*', 0), (9, '|'): ('_item*', 0),
-        (10, ';'): ('_rhs', 3), (10, '|'): ('_rhs', 3), (11, ';'): ('list', 1),
-        (11, '|'): ('list', 1), (12, '!'): ('_item*', 2),
-        (12, ';'): ('_item*', 2), (12, 'string'): ('_item*', 2),
-        (12, 'token'): ('_item*', 2), (12, '|'): ('_item*', 2),
-        (13, '!'): ('_item', 1), (13, ';'): ('_item', 1),
-        (13, 'string'): ('_item', 1), (13, 'token'): ('_item', 1),
-        (13, '|'): ('_item', 1), (14, '!'): ('_item', 2),
-        (14, ';'): ('_item', 2), (14, 'string'): ('_item', 2),
-        (14, 'token'): ('_item', 2), (14, '|'): ('_item', 2),
-        (15, '!'): ('_item', 2), (15, ';'): ('_item', 2),
-        (15, 'string'): ('_item', 2), (15, 'token'): ('_item', 2),
-        (15, '|'): ('_item', 2), (16, '!'): ('_item', 1),
-        (16, ';'): ('_item', 1), (16, 'string'): ('_item', 1),
-        (16, 'token'): ('_item', 1), (16, '|'): ('_item', 1),
-        (17, '!'): ('_tos', 1), (17, '*'): ('_tos', 1), (17, '+'): ('_tos', 1),
-        (17, ';'): ('_tos', 1), (17, 'string'): ('_tos', 1),
-        (17, 'token'): ('_tos', 1), (17, '|'): ('_tos', 1),
-        (18, '!'): ('_tos', 1), (18, '*'): ('_tos', 1), (18, '+'): ('_tos', 1),
-        (18, ';'): ('_tos', 1), (18, 'string'): ('_tos', 1),
-        (18, 'token'): ('_tos', 1), (18, '|'): ('_tos', 1)
+        (0, EOF): ('_0*', 0), (0, 'token'): ('_0*', 0),
+        (2, EOF): ('grammar', 1), (3, EOF): ('_0*', 2),
+        (3, 'token'): ('_0*', 2), (5, '!'): ('_4*', 0), (5, '('): ('_4*', 0),
+        (5, ';'): ('_4*', 0), (5, 'string'): ('_4*', 0),
+        (5, 'token'): ('_4*', 0), (5, '|'): ('_4*', 0), (6, ';'): ('_2*', 0),
+        (6, '|'): ('_2*', 0), (8, EOF): ('rule', 5), (8, 'token'): ('rule', 5),
+        (10, '!'): ('_4*', 0), (10, '('): ('_4*', 0), (10, ')'): ('_4*', 0),
+        (10, ';'): ('_4*', 0), (10, 'string'): ('_4*', 0),
+        (10, 'token'): ('_4*', 0), (10, '|'): ('_4*', 0),
+        (11, ')'): ('_2*', 3), (11, ';'): ('_2*', 3), (11, '|'): ('_2*', 3),
+        (12, ')'): ('list', 1), (12, ';'): ('list', 1), (12, '|'): ('list', 1),
+        (13, '!'): ('_6?', 1), (13, '('): ('_6?', 1), (13, ')'): ('_6?', 1),
+        (13, ';'): ('_6?', 1), (13, 'string'): ('_6?', 1),
+        (13, 'token'): ('_6?', 1), (13, '|'): ('_6?', 1),
+        (14, '!'): ('_6?', 1), (14, '('): ('_6?', 1), (14, ')'): ('_6?', 1),
+        (14, ';'): ('_6?', 1), (14, 'string'): ('_6?', 1),
+        (14, 'token'): ('_6?', 1), (14, '|'): ('_6?', 1),
+        (15, '!'): ('_6?', 1), (15, '('): ('_6?', 1), (15, ')'): ('_6?', 1),
+        (15, ';'): ('_6?', 1), (15, 'string'): ('_6?', 1),
+        (15, 'token'): ('_6?', 1), (15, '|'): ('_6?', 1),
+        (16, '!'): ('_6?', 0), (16, '('): ('_6?', 0), (16, ')'): ('_6?', 0),
+        (16, ';'): ('_6?', 0), (16, 'string'): ('_6?', 0),
+        (16, 'token'): ('_6?', 0), (16, '|'): ('_6?', 0),
+        (17, '!'): ('_4*', 3), (17, '('): ('_4*', 3), (17, ')'): ('_4*', 3),
+        (17, ';'): ('_4*', 3), (17, 'string'): ('_4*', 3),
+        (17, 'token'): ('_4*', 3), (17, '|'): ('_4*', 3),
+        (18, '!'): ('_4*', 2), (18, '('): ('_4*', 2), (18, ')'): ('_4*', 2),
+        (18, ';'): ('_4*', 2), (18, 'string'): ('_4*', 2),
+        (18, 'token'): ('_4*', 2), (18, '|'): ('_4*', 2),
+        (19, '!'): ('_item', 1), (19, '('): ('_item', 1),
+        (19, ')'): ('_item', 1), (19, '*'): ('_item', 1),
+        (19, '+'): ('_item', 1), (19, ';'): ('_item', 1),
+        (19, '?'): ('_item', 1), (19, 'string'): ('_item', 1),
+        (19, 'token'): ('_item', 1), (19, '|'): ('_item', 1),
+        (20, '!'): ('_item', 1), (20, '('): ('_item', 1),
+        (20, ')'): ('_item', 1), (20, '*'): ('_item', 1),
+        (20, '+'): ('_item', 1), (20, ';'): ('_item', 1),
+        (20, '?'): ('_item', 1), (20, 'string'): ('_item', 1),
+        (20, 'token'): ('_item', 1), (20, '|'): ('_item', 1),
+        (21, '!'): ('_item', 1), (21, '('): ('_item', 1),
+        (21, ')'): ('_item', 1), (21, '*'): ('_item', 1),
+        (21, '+'): ('_item', 1), (21, ';'): ('_item', 1),
+        (21, '?'): ('_item', 1), (21, 'string'): ('_item', 1),
+        (21, 'token'): ('_item', 1), (21, '|'): ('_item', 1),
+        (22, '!'): ('_4*', 0), (22, '('): ('_4*', 0), (22, ')'): ('_4*', 0),
+        (22, 'string'): ('_4*', 0), (22, 'token'): ('_4*', 0),
+        (22, '|'): ('_4*', 0), (23, ')'): ('_2*', 0), (23, '|'): ('_2*', 0),
+        (24, '!'): ('group', 4), (24, '('): ('group', 4),
+        (24, ')'): ('group', 4), (24, '*'): ('group', 4),
+        (24, '+'): ('group', 4), (24, ';'): ('group', 4),
+        (24, '?'): ('group', 4), (24, 'string'): ('group', 4),
+        (24, 'token'): ('group', 4), (24, '|'): ('group', 4)
     }
     _goto = {
-        (0, 'grammar'): 1, (0, 'rule*'): 2, (2, 'rule'): 3, (5, '_item*'): 11,
-        (5, '_rhs'): 6, (5, 'list'): 8, (9, '_item*'): 11, (9, 'list'): 10,
-        (11, '_item'): 12, (11, '_tos'): 13
+        (0, '_0*'): 2, (0, 'grammar'): 1, (2, 'rule'): 3, (5, '_4*'): 12,
+        (5, 'list'): 6, (6, '_2*'): 7, (10, '_4*'): 12, (10, 'list'): 11,
+        (12, '_item'): 16, (12, 'group'): 21, (16, '_6?'): 17, (22, '_4*'): 12,
+        (22, 'list'): 23, (23, '_2*'): 9
     }
     _shift = {
-        (1, EOF): 19, (2, 'token'): 4, (4, ':'): 5, (6, ';'): 7, (6, '|'): 9,
-        (11, '!'): 16, (11, 'string'): 18, (11, 'token'): 17, (13, '*'): 15,
-        (13, '+'): 14
+        (1, EOF): 25, (2, 'token'): 4, (4, ':'): 5, (7, ';'): 8, (7, '|'): 10,
+        (9, ')'): 24, (9, '|'): 10, (12, '!'): 18, (12, '('): 22,
+        (12, 'string'): 20, (12, 'token'): 19, (16, '*'): 14, (16, '+'): 15,
+        (16, '?'): 13
     }
 
     def __init__(self, max_err=None, errcorr_pre=4, errcorr_post=4):
