@@ -1,3 +1,5 @@
+- allow brackets "(" ... ")" for grouping in grammar files
+- new operator "?" (zero or one copy of an expression) in grammar files
 - new command line option -o to specify an output file (instead of stdout)
 - Wisent can now optionally generate example source code to illustrate use
   of the generated parser (command line option -e).
